# Iwe-Pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run_iwe_pipeline.py  test_local.py
configs/: hf_dataset.yaml  local.yaml  run_iwe_sample.yaml
configs/stages/: fetch_ocr.yaml  postprocess_quality.yaml
docs/: CONTRIBUTING.md  README_TEST.md
iwe_pipeline/: __init__.py  utils.py
iwe_pipeline/blocks/assemble/: group_pages.py
iwe_pipeline/blocks/fetch/: azure_fetch_pdf.py
iwe_pipeline/blocks/ocr/: karanta_vllm_ocr.py  split_pages.py
iwe_pipeline/blocks/postprocess/: boilerplate.py  language_tag.py  normalize.py  tables.py
iwe_pipeline/blocks/quality/: bert_score.py
iwe_pipeline/datamodel/: doc_schema.py  ids.py
iwe_pipeline/lid/: cleaning_utils.py  fasttext.py  filter.py
iwe_pipeline/monitoring/: __init__.py  tracker.py
iwe_pipeline/monitoring/ui/: index.html  record.html
iwe_pipeline/readers/: __init__.py  azure_manifest_reader.py  pdf.py
iwe_pipeline/server/: __init__.py  manager.py
iwe_pipeline/utils/: io.py  retry.py  text.py  utils.py
iwe_pipeline/writers/: final_writer.py  ocr_index_writer.py
scripts/: make_manifest.py  run_fetch_ocr.py  run_postprocess.py  run_publish.py
tests/: test_blocks_fetch.py  test_blocks_ocr.py  test_blocks_postprocess.py  test_blocks_quality.py  test_pipelines_smoke.py
